# yt_transcriber

./: .gitignore  CLAUDE.md  README.md  demo_multi_channel.py  example_usage.py  migrate_structure.py  process_videos.py  pyproject.toml  requirements.txt  run_batch.py  run_pipeline.py  setup_api.py  yt_chunker.md  yt_whisper_pipeline.py
.cursor/rules/: dev-preferences.mdc  tech-stack.mdc
.github/workflows/: ci.yml
app/: batch_processor.py  config.py  pipeline.py
config/: all_channels_urls.txt  athletic_urls.txt  channel_summary.txt  channels.yaml  fpts_urls.txt  jj_urls.txt  pff_urls.txt  ringer_fantasy_urls.txt  ringer_nfl_urls.txt
docs/technical/: youtube_url_fetcher.md
scripts/: cleanup_temp.py  fetch_recent_videos.py
src/yt_transcriber/: batch.py  channels.py  cli.py  config.py  pipeline.py  utils.py
src/yt_transcriber/core/: url_update.py
tests/: test_e2e.py  test_pipeline_and_process.py  test_subtitles.py  test_url_update.py
