[project]
name = "yt-transcriber"
version = "0.1.0"
description = "A powerful Python pipeline for downloading YouTube videos, transcribing them using OpenAI's Whisper, and generating summaries"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "yt-dlp>=2024.1.0",
    "openai>=1.0.0",
    "tqdm>=4.66.0",
    "python-dateutil>=2.8.2",
    "typing-extensions>=4.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
yt-transcribe = "yt_transcriber.cli:run_pipeline"
yt-batch = "yt_transcriber.cli:run_batch"
yt-fetch-channels = "yt_transcriber.cli:run_channel_fetcher"
yt-cleanup = "yt_transcriber.cli:run_cleanup"
yt-update = "yt_transcriber.cli:run_update"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "ty>=0.0.49,<0.1",  # pre-1.0: pin to a compatible range so a stricter release can't break CI unexpectedly
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
# Code uses PEP 604 unions (X | None) at runtime, so 3.10 is the real floor.
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ty]
# Astral's type checker (Rust). Run with `uv run ty check src/ tests/`.
# src/ and tests/ are gated in CI alongside ruff and pytest. Keep `ty check` green.

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
